added the ability to remove beings from radar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,6 +199,15 @@ h2 {
   to {
     transform: rotate(360deg);
   }
+  0% {
+    color: green;
+  }
+  50% {
+    color: greenyellow;
+  }
+  100% {
+    color: green;
+  }
 }
 
 @media screen and (max-width: 54.375em) {
